--- a/main.html
+++ b/main.html
@@ -8,6 +8,33 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<div>
+			<label>Name</label>
+		<input type="text" id="name" placeholder="Name"/>
+		</div>
+		<div>
+			<label>Phone Number</label>
+		<input type="text" id="name" placeholder="Phone Number"/>
+		</div>
+		<div>
+			<label>Address</label>
+		<input type="text" id="name" placeholder="Address"/>
+		</div>
+		<div>
+			<label>Have you ever lived with a Dog before?</label>
+		<input type="checkbox" id="name" placeholder="Name"/>
+		</div>
+		<div>
+			<label>Please select your preferred breeds	</label>
+		<select id="multiSelect">
+		  <option value="labrador">Labrador Retriever</option>
+		  <option value="golden">Golden Retriever</option>
+		  <option value="poodle">Poodle</option>
+</select>
+		</div>
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
