--- a/main.html
+++ b/main.html
@@ -15,19 +15,19 @@
 		</div>
 		<div>
 			<label>Phone Number</label>
-		<input type="text" id="name" placeholder="Phone Number"/>
+		<input type="text" id="phone" placeholder="Phone Number"/>
 		</div>
 		<div>
 			<label>Address</label>
-		<input type="text" id="name" placeholder="Address"/>
+		<input type="text" id="address" placeholder="Address"/>
 		</div>
 		<div>
 			<label>Have you ever lived with a Dog before?</label>
-		<input type="checkbox" id="name" placeholder="Name"/>
+		<input type="checkbox" id="checkbox" placeholder="Name"/>
 		</div>
 		<div>
 			<label>Please select your preferred breeds	</label>
-		<select id="multiSelect">
+		<select type="select" id="multiSelect">
 		  <option value="labrador">Labrador Retriever</option>
 		  <option value="golden">Golden Retriever</option>
 		  <option value="poodle">Poodle</option>
