--- a/main.html
+++ b/main.html
@@ -33,6 +33,7 @@
 		  <option value="poodle">Poodle</option>
 </select>
 		</div>
+		<button type="submit">submit</button>
 		
 	</form>
     <script type="text/javascript" src="./script.js">
