--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form>
+<!-- 	<form>
 		<div>
 			<label>Name</label>
 		<input type="text" id="name" placeholder="Name"/>
@@ -35,7 +35,31 @@
 		</div>
 		<button type="submit">submit</button>
 		
-	</form>
+	</form> -->
+	<form>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" placeholder="Name" required>
+
+        <label for="phone">Phone Number:</label>
+        <input type="text" id="phone" name="phone" placeholder="Phone Number" required>
+
+        <label for="address">Address:</label>
+        <input type="text" id="address" name="address" placeholder="Address" required>
+
+        <label for="dog_experience">Have you ever lived with a Dog before?</label>
+        <input type="checkbox" id="dog_experience" name="dog_experience" value="Have you ever lived with a Dog before?" required>
+
+        <label for="preferred_breeds">Please select your preferred breeds:</label>
+        <select id="preferred_breeds" name="preferred_breeds[]" multiple required>
+            <option value="Golden Retriever">Golden Retriever</option>
+            <option value="Labrador Retriever">Labrador Retriever</option>
+            <option value="German Shepherd">German Shepherd</option>
+            <option value="Bulldog">Bulldog</option>
+            <option value="Beagle">Beagle</option>
+        </select>
+
+        <input type="submit" value="Submit">
+    </form>
     <script type="text/javascript" src="./script.js">
 </script>
 
