--- a/main.html
+++ b/main.html
@@ -37,29 +37,35 @@
 		
 	</form> -->
 	<form>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" placeholder="Name" required>
+            <!-- Name Field -->
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" placeholder="Your Name" required>
 
-        <label for="phone">Phone Number:</label>
-        <input type="text" id="phone" name="phone" placeholder="Phone Number" required>
+            <!-- Phone Number Field -->
+            <label for="phone">Phone Number:</label>
+            <input type="text" id="phone" name="phone" placeholder="Phone Number" required>
 
-        <label for="address">Address:</label>
-        <input type="text" id="address" name="address" placeholder="Address" required>
+            <!-- Address Field -->
+            <label for="address">Address:</label>
+            <input type="text" id="address" name="address" placeholder="Your Address" required>
 
-        <label for="dog_experience">Have you ever lived with a Dog before?</label>
-        <input type="checkbox" id="dog_experience" name="dog_experience" value="Have you ever lived with a Dog before?" required>
+            <!-- Have you ever lived with a Dog before? (Checkbox) -->
+            <label>Have you ever lived with a Dog before?</label>
+            <input type="checkbox" id="dogExperience" name="dogExperience" value="Have you ever lived with a Dog before?" required>
 
-        <label for="preferred_breeds">Please select your preferred breeds:</label>
-        <select id="preferred_breeds" name="preferred_breeds[]" multiple required>
-            <option value="Golden Retriever">Golden Retriever</option>
-            <option value="Labrador Retriever">Labrador Retriever</option>
-            <option value="German Shepherd">German Shepherd</option>
-            <option value="Bulldog">Bulldog</option>
-            <option value="Beagle">Beagle</option>
-        </select>
+            <!-- Preferred Breeds (Multi-select) -->
+            <label for="preferredBreeds">Please select your preferred breeds:</label>
+            <select id="preferredBreeds" name="preferredBreeds[]" multiple required>
+                <option value="Labrador Retriever">Labrador Retriever</option>
+                <option value="German Shepherd">German Shepherd</option>
+                <option value="Golden Retriever">Golden Retriever</option>
+                <option value="Poodle">Poodle</option>
+                <option value="Bulldog">Bulldog</option>
+            </select>
 
-        <input type="submit" value="Submit">
-    </form>
+            <!-- Submit Button -->
+            <input type="submit" value="Submit">
+        </form>
     <script type="text/javascript" src="./script.js">
 </script>
 
